--- a/css/style.css
+++ b/css/style.css
@@ -445,12 +445,26 @@ template {
   border-radius: 6px;
   -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05); }
+  .button:hover, .button:focus {
+    -webkit-box-shadow: 0px 2px 18px rgba(245, 224, 126, 0.83);
+            box-shadow: 0px 2px 18px rgba(245, 224, 126, 0.83); }
+  .button:active {
+    background-color: #F5E07E;
+    color: #000000; }
+  .button:disabled {
+    background-color: #FBFBFB;
+    color: #888888; }
   .button--submit {
     background-color: #f5e07e; }
   .button--second {
     font-family: "Manrope-Medium", Arial, sans-serif;
     background: #ffffff;
     border: 1px solid #e8e8e8; }
+    .button--second:hover, .button--second:focus {
+      background-color: #FFF2B5;
+      color: #68634F;
+      -webkit-box-shadow: none;
+              box-shadow: none; }
 
 .tools {
   padding-bottom: 70px;
@@ -588,14 +602,24 @@ template {
   .extra-item:last-child {
     margin-right: 0; }
 
-.extra-item__wrapper {
+.extra-item__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  color: #000000;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.05); }
+  .extra-item__link:hover, .extra-item__link:focus {
+    -webkit-box-shadow: 0px 2px 18px rgba(245, 224, 126, 0.23);
+            box-shadow: 0px 2px 18px rgba(245, 224, 126, 0.23); }
+  .extra-item__link:active {
+    -webkit-box-shadow: 0px 2px 9px rgba(245, 224, 126, 0.65);
+            box-shadow: 0px 2px 9px rgba(245, 224, 126, 0.65); }
 
 .extra-item__image {
   border-radius: 20px; }
@@ -897,6 +921,9 @@ template {
   font-family: "Manrope-Medium", Arial, sans-serif;
   font-size: 16px;
   color: #000000; }
+  .app-form__input[name=ip-form] + .app-form__span-ipform:hover, .app-form__input[name=ip-form] + .app-form__span-ipform:focus {
+    background-color: #FFF2B6;
+    color: #68634F; }
   .app-form__input[name=ip-form] + .app-form__span-ipform--left {
     border-radius: 8px 0px 0px 8px; }
   .app-form__input[name=ip-form] + .app-form__span-ipform--right {
@@ -904,6 +931,9 @@ template {
 
 .app-form__input[name=ip-form]:checked + .app-form__span-ipform {
   background-color: #F5E07E; }
+  .app-form__input[name=ip-form]:checked + .app-form__span-ipform:hover, .app-form__input[name=ip-form]:checked + .app-form__span-ipform:focus {
+    background-color: #FFF2B6;
+    color: #68634F; }
 
 .app-form__input[name=logo-input] + .app-form__span {
   border: 1px dashed #e8e8e8;
