--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -9,6 +9,21 @@
   border-radius: 6px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
 
+  &:hover,
+  &:focus {
+    box-shadow: 0px 2px 18px rgba(245, 224, 126, 0.83);
+  }
+
+  &:active {
+    background-color: #F5E07E;
+    color: $color-main;
+  }
+
+  &:disabled {
+    background-color: #FBFBFB;
+    color: #888888;
+  }
+
   &--submit {
     background-color: $color-second;
   }
@@ -17,5 +32,12 @@
     font-family: $ff-medium;
     background: #ffffff;
     border: 1px solid $color-border;
+
+    &:hover,
+    &:focus {
+      background-color: #FFF2B5;
+      color: #68634F;
+      box-shadow: none;
+    }
   }
 }
