--- a/sass/blocks/extra-item.scss
+++ b/sass/blocks/extra-item.scss
@@ -9,9 +9,21 @@
   }
 }
 
-.extra-item__wrapper {
+.extra-item__link {
   display: flex;
   flex-direction: column;
+  color: $color-main;
+  border-radius: 20px;
+  box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.05);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 2px 18px rgba(245, 224, 126, 0.23);
+  }
+
+  &:active {
+    box-shadow: 0px 2px 9px rgba(245, 224, 126, 0.65);
+  }
 }
 
 .extra-item__image {
