--- a/sass/blocks/app-form.scss
+++ b/sass/blocks/app-form.scss
@@ -239,14 +239,14 @@
     @include pseudo;
     width: 24px;
     height: 24px;
-    left: 8px;
-    top: 8px;
+    left: 7px;
+    top: 7px;
     border-radius: 4px;
   }
 
   &:hover:after {
-    left: 7px;
-    top: 7px;
+    left: 6px;
+    top: 6px;
   }
 }
 
@@ -424,8 +424,8 @@
 
 .app-form__input[name=color]:checked + .app-form__span {
   &:after {
-    left: 7px;
-    top: 7px;
+    left: 6px;
+    top: 6px;
   }
 
   &--1 {
@@ -566,5 +566,75 @@ input[type="number"]::-webkit-inner-spin-button {
 
   &:last-child {
     margin-right: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .app-form {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .app-form__label {
+    width: 100%;
+
+    &--ip-form {
+      width: 50%;
+    }
+
+    &--card {
+      width: 50%;
+      margin-right: 0;
+    }
+  }
+
+  .app-form__input-wrapper {
+    flex-direction: column;
+
+    &--ip-form {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &--file {
+      margin-bottom: 100px;
+    }
+
+    &--card-view {
+      flex-direction: row;
+      flex-wrap: wrap;
+      margin-bottom: 15px;
+
+      & > .app-form__label {
+        width: 50%;
+      }
+    }
+
+    &--colors {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: start;
+
+      & > .app-form__label {
+        width: 20%;
+      }
+    }
+
+    &--buttons {
+      justify-content: space-between;
+    }
+  }
+
+    .app-form__input[name=ip-form] + .app-form__span-ipform {
+    width: 150px;
+  }
+
+  .app-form__input[name=logo-input] + .app-form__span {
+      width: 100%;
+    }
+
+  .app-form__button {
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
