--- a/sass/blocks/extra-item.scss
+++ b/sass/blocks/extra-item.scss
@@ -41,3 +41,10 @@
   margin-top: -60px;
   background-color: #fff;
 }
+
+@media (max-width: 576px) {
+  .extra-item {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
