--- a/sass/blocks/lk-promo.scss
+++ b/sass/blocks/lk-promo.scss
@@ -37,3 +37,9 @@
   box-shadow: 0px 2px 8px $color-border;
   font-family: $ff-medium;
 }
+
+@media (max-width: 576px) {
+  .lk-promo__desc {
+    width: 100%;
+  }
+}
