--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -13,3 +13,15 @@
   font-family: $ff-medium;
   font-size: 16px;
 }
+
+@media (max-width: 576px) {
+  .page-footer__txt {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  .page-footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+}
