--- a/sass/blocks/tools.scss
+++ b/sass/blocks/tools.scss
@@ -1,4 +1,5 @@
 .tools {
+  padding-top: 40px;
   padding-bottom: 70px;
   background-color: $color-bg;
 }
@@ -19,3 +20,14 @@
 .tools__list {
   display: flex;
 }
+
+@media (max-width: 576px) {
+  .tools__list {
+    flex-direction: column;
+  }
+
+  .tools__row {
+    align-items: center;
+    flex-direction: column;
+  }
+ }
