--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -41,6 +41,8 @@ ul {
 }
 
 .wrapper {
-  max-width: 1240px;
+  max-width: 1280px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
