--- a/css/style.css
+++ b/css/style.css
@@ -1508,4 +1508,8 @@ ul {
   padding-right: 20px;
   margin: 0 auto; }
 
+:active, :hover, :focus {
+  outline: 0;
+  outline-offset: 0; }
+
 /*# sourceMappingURL=style.css.map */
